fix layouts, tweak colors, header for code block
- furthur fixes on home page for mobile resolutions
- truncate blog post summary at first appearance of <pre>
- renable broken color variables
- text shadows

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -254,7 +254,7 @@ pre, code {
 }
 
 code {
-  color: $code_color;
+  color: $inline_code_color;
   border-color: $palette_26gray; //might insert better variable name
 }
 
@@ -613,7 +613,7 @@ ul.contributors {
     text-decoration: none;
     @include border-radius();
     &:hover {
-      background-color: $link_color;
+      background-color: $link_hover_color;
       color: $palette_white;
     }
   }
@@ -649,21 +649,21 @@ ul.contributors {
 // Styling for code blocks
 
 .filename {
-  background: $palette_pale_lavender;
-  padding: 3px 10px 3px 43px;
-  @include single-text-shadow($palette_white_20trans);
-  @include border-radius(2px);
-  margin-right: 10px;
-  margin-left: 5px;
-  margin-top: 26px;
+  //background: $palette_pale_lavender;
+  background: transparentize($palette_blue, .75);
+  padding: 3px 10px;
+  @include single-text-shadow($palette_white_50trans);
+  @include border-radius(4px);
+  margin: 26px 10px 0 50px;
+  position: relative;
 }
 
 .filename + pre.prettify {
   background-image: image-url("edit.png");
   background-repeat: no-repeat;
-  background-position: 3px 3px;
-  margin-top: -38px;
-  padding-top: 45px;
+  background-position: 5px 2px;
+  margin-top: -40px;
+  padding-top: 50px;
 }
 
 pre.output {
@@ -707,7 +707,7 @@ ul.filetree {
   line-height: 22px;
   font-family: $fancy_font_family;
   font-weight: bold;
-  @include single-text-shadow;
+  @include single-text-shadow();
   text-align: center;
   @include border-radius();
   @include single-box-shadow(rgba(0,0,0,0.09), 0, 1px, 3px);
@@ -723,7 +723,7 @@ ul.filetree {
     color: $palette_white;
     font-size: 10px;
     text-transform: uppercase;
-    @include single-text-shadow;
+    @include single-text-shadow();
     line-height: 13px;
     padding-top: 1px;
     border-bottom: 1px solid $light_border;
@@ -742,7 +742,7 @@ table.data, .metadata table {
   th {
     font-size: .9em;
     @include background-image(linear-gradient(bottom, #dbd7db 17%, #e8e8e8 60%));
-    @include text-shadow; 
+    @include single-text-shadow(); 
     border-top: 1px solid $light_border;
     border-bottom: 1px solid $light_border;
     padding: 7px 0 7px 7px;
@@ -833,9 +833,9 @@ img.flag {
 @media (min-width: 980px) {
   .navbar a.brand {
     padding-top: 5px;
-    padding-bottom: 7px;
+    padding-bottom: 9px;
     font-size: 2.2em;
-    line-height: 1.05em;
+    line-height: 1em;
     @include single-transition('color', '.8s', 'ease-in-out', '.1s');
     &:hover {
       color: $navbarLinkColorHover; 
@@ -858,7 +858,7 @@ img.flag {
       a {
         padding: 25px 15px 16px;
         margin-top: -20px;
-        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
+        @include single-text-shadow(rgba(0,0,0,0.75));
         @include single-transition('color', '.5s', 'ease-in-out', '0');
       }
     }
@@ -959,13 +959,15 @@ footer {
 
 body.home {
   #intro {
-    background-color: $intro_background_color;
-    //@include background-image(linear-gradient($page_background_color, $page_background_color 250px, #fff 250px));
+    //background-color: $intro_background_color;
+    // give the appearance of a hover light under the nav bar
+    @include background-image(linear-gradient(top, rgba(128,128,128,0.05), $palette_50gray_80trans));
     .logline {
       margin-top: 0.6em;
       //line-height: 1.5em;
       @include span(8, true);
       @include border-box;
+      @include single-text-shadow(rgba(0,0,0,.1));
       @extend .inward-gutter-left;
       h2 {
         color: $log_title_color;
@@ -1040,7 +1042,6 @@ body.home {
   // TODO unnest me from .home!
   #slideshow {
     margin-bottom: 0;
-    //border-bottom: 1px solid $light_border;
     line-height: inherit;
     .carousel-control {
       @include single-box-shadow($palette_black_50trans, 0, 0, 2px);
@@ -1082,8 +1083,12 @@ body.home {
           @extend .inward-gutters;
           ol {
             margin-top: 2em;
+            margin-bottom: 0;
             li {
               padding: 0 0 1.5em 0;
+              &:last-of-type {
+                padding-bottom: 0;
+              }
             }
           }
         }
@@ -1107,15 +1112,15 @@ body.home {
             padding: 0;
            @include border-radius(8px 8px 0 0);
             position: relative;
-            max-width: none;
-            width: 125%;
+            max-width: 125%;
             margin-left: -8em;
             margin-top: 3em;
           }
         }
       }
       .layout-photo {
-        height: inherit;
+        //height: inherit;
+        height: 520px; // min-height doesn't inherit, needed for responsive
 
         // <<KEEP - use these styles if we decide to have background on .visual
         //.visual {
@@ -1141,7 +1146,7 @@ body.home {
           h2 {
             color: $link_color;
           }
-          p:not([class="more"]) {
+          p:not(.more) {
             color: $palette_white;
           }
           p.more a {
@@ -1289,7 +1294,7 @@ body.blog {
           line-height: 1.35;
           padding-top: .2em;
           margin-bottom: 5px;
-          border-bottom: 1px solid $light_border;
+          border-bottom: 1px solid $article_border;
           a {
             &:hover {
               text-decoration: none;
@@ -1327,7 +1332,7 @@ body.blog {
         }
         .footer {
           padding-top: 5px;
-          border-top: 1px solid $light_border;
+          border-top: 1px solid $article_border;
           text-transform: lowercase;
         }
         #comments {
@@ -1647,14 +1652,15 @@ body.guide {
         margin: 1.5em;
         margin-right: 0;
         a {
-          color: $chapter_title_color;
+          //color: $chapter_title_color;
+          color: transparentize($palette_blue, .1);
           text-decoration: none;
         }
       }
     }
     ul.legend {
       padding: 0;
-      margin: 0;
+      margin: 0 0 0 -5px;
       li {
         list-style-type: none;
         line-height: 1.5;
@@ -1685,28 +1691,50 @@ body.guide {
   .content-bumper {
     margin-bottom: 1em;
   }
-  body.home #activity {
-    padding: 0;
-    #news, #spotlight, #events {
-      border: none;
+  body.home {
+    #intro .cta {
+      text-align: center;
+      a.primary {
+        margin-top: .5em;
+        margin-bottom: 1em;
+      }
+    }
+    #activity {
       padding: 0;
-      margin-bottom: 2em;
+      #news, #spotlight, #events {
+        border: none;
+        padding: 0;
+        margin-bottom: 2em;
+      }
     }
   }
 }
 
 // navbar collapses under 980px
 @media (max-width: 979px) {
+  .navbar-fixed-top {
+    margin-bottom: 0;
+  }
   // <<HACK to undo .offset4
   .navbar-fixed-top .nav-collapse {
     margin-left: 0;
   }
   // HACK>>
-  #main {
+  body.home #slideshow .carousel-inner {
+    // SEMI-HACK: make more room for small screens
+    //height: 860px;
+
+    height: auto;
+    overflow: visible;
+  }
+  body:not(.guide) #main {
     margin-top: 0;
   }
-  //h1 small {
-  //  display: block;
-  //  padding-top: 6px;
-  //}
+  body.guide #main {
+    margin-top: 49px;
+  }
+  body.guide #content-header .directory {
+    float: none;
+    margin-top: 2em;
+  }
 }
